212/stack/sonarr/ingress-sonarr.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
    nginx.ingress.kubernetes.io/auth-tls-secret: 'default/sonarr'
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: issuer-cert-manager-production
    certmanager.k8s.io/cluster-issuer: issuer-cert-manager-production
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sonarr.i.dfl.mn
    secretName: cert-sonarr
  rules:
  - host: sonarr.i.dfl.mn
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr
          servicePort: 8989
